--- a/profiles/openasu/themes/college/sass/_forms_ws2.scss
+++ b/profiles/openasu/themes/college/sass/_forms_ws2.scss
@@ -231,9 +231,10 @@ div.ctools-modal-content .dependent-options {
   }
 }
 
+// Edit form buttons
 #modal-content .form-actions,
 .page-admin .form-actions,
-#block-system-main .node-form {
+#block-system-main .node-form .form-actions {
   background-color: #ffe9ac;
   border-radius: 0.25em;
   margin: 0 1em 1em 0;
